// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`SMS Connection Request store should update store when invitation is seen 1`] = `
Object {
  "error": null,
  "isFetching": false,
  "payload": Object {
    "connReqId": "123asd",
    "senderAgentKeyDlgProof": "delegate proof",
    "senderDID": "5iZiu2aLYrQXSdon123456",
    "senderDIDVerKey": "12345rD1ybsSR9hKWBePkRSZdnYHAv4KQ8XxcWHHasdf",
    "senderEndpoint": "192.168.1.1:80",
    "senderLogoUrl": "http://test-agency.com/logo",
    "senderName": "Evernym, Inc",
    "statusCode": "MS-000",
    "targetName": "Test",
  },
  "status": "SEEN",
}
`;

exports[`SMS Connection Request store should update store when invitation receive fail 1`] = `
Object {
  "error": Object {
    "code": "TEST-FAIL",
    "message": "Test fail message",
  },
  "isFetching": false,
  "payload": null,
  "status": "FETCH_FAILED",
}
`;

exports[`SMS Connection Request store should update store when invitation received 1`] = `
Object {
  "error": null,
  "isFetching": false,
  "payload": Object {
    "connReqId": "123asd",
    "senderAgentKeyDlgProof": "delegate proof",
    "senderDID": "5iZiu2aLYrQXSdon123456",
    "senderDIDVerKey": "12345rD1ybsSR9hKWBePkRSZdnYHAv4KQ8XxcWHHasdf",
    "senderEndpoint": "192.168.1.1:80",
    "senderLogoUrl": "http://test-agency.com/logo",
    "senderName": "Evernym, Inc",
    "statusCode": "MS-000",
    "targetName": "Test",
  },
  "status": "RECEIVED",
}
`;

exports[`SMS Connection Request store should update store when pending invitation is requested 1`] = `
Object {
  "error": null,
  "isFetching": true,
  "payload": null,
  "status": "NONE",
}
`;
